fix: Remove horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("../public/fonts/stylesheet.css");
+@import url('../public/fonts/stylesheet.css');
 
 :root {
   font-family: Inter, system-ui, sans-serif;
@@ -34,8 +34,16 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin-block-end: 0;
 }
 
@@ -52,14 +60,21 @@ body {
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
 }
 
@@ -77,8 +92,10 @@ picture {
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
 }
@@ -103,4 +120,8 @@ textarea:not([rows]) {
 
 #root > :last-child {
   margin-bottom: 40px;
+}
+
+body {
+  overflow-x: hidden;
 }
